# coityspeeder-backend

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  manual-release.yml  release.yml
src/: core.rs  detector.rs  main.rs
